--- a/yo/app/views/main.html
+++ b/yo/app/views/main.html
@@ -5,4 +5,7 @@
     Demo
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/addFlight">Add Flight<span class="glyphicon glyphicon-ok"></span></a></p>
+  <input ng-model="username"></input>
+  <input ng-model="password"></input>
+  <button ng-click="login()">Login</button>
 </div>
