GCM is now auto-positioned.

--- a/yo/app/views/addflight.html
+++ b/yo/app/views/addflight.html
@@ -114,4 +114,4 @@
 
 </div>
 <img
-	ng-src="http://www.gcmap.com/map?P={{flight.from}}-{{flight.to}}&MS=bm&MR=540&MX=720x360&PM=*" />
+	ng-src="http://www.gcmap.com/map?P={{flight.from}}-{{flight.to}}&MS=bm&&MX=720x360&PM=*" />
