A little bit nices gcm-image.

--- a/yo/app/views/addflight.html
+++ b/yo/app/views/addflight.html
@@ -113,5 +113,5 @@
 	</form>
 
 </div>
-<img
+<img class="img-rounded img-responsive"
 	ng-src="http://www.gcmap.com/map?P={{flight.from}}-{{flight.to}}&MS=bm&&MX=720x360&PM=*" />
