Working sign-in. We can now save flights. Flight-Listing is started.

--- a/yo/app/views/main.html
+++ b/yo/app/views/main.html
@@ -5,7 +5,9 @@
     Demo
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/addFlight">Add Flight<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/flightlist">List Flights<span class="glyphicon glyphicon-ok"></span></a></p>
+  
   <input ng-model="username"></input>
-  <input ng-model="password"></input>
+  <input ng-model="password" type="password"></input>
   <button ng-click="login()">Login</button>
 </div>
