Implemented first flight list. Needs detailed work.

--- a/yo/app/views/flightlist.html
+++ b/yo/app/views/flightlist.html
@@ -1,1 +1,6 @@
 <p>This is the flightlist view.</p>
+<ul class="list-group">
+<li ng-repeat="flight in flights" class="list-group-item">
+{{flight.flightNo}}
+</li>
+</ul>
